--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,23 @@
   "description": "Server part for Blackjack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --watch . --ext ts --exec ts-node src/server.ts"
   },
   "author": "Anastasia Polivoda",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": [],
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/uuid": "^9.0.1",
+    "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@types/socket.io": "^3.0.2",
+    "express": "^4.18.2",
+    "nanoid": "^4.0.2",
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
+  }
 }
