--- a/blackjack/package.json
+++ b/blackjack/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "eslint": "^8.38.0"
   }
 }
