--- a/blackjack/package.json
+++ b/blackjack/package.json
@@ -8,7 +8,11 @@
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.10.0",
+    "react-toast": "^1.0.3",
+    "react-toastify": "^9.1.2",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9"
   },
@@ -39,6 +43,13 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.22",
+    "@types/react": "^18.0.31",
+    "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -52,14 +63,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.7",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.22",
-    "@types/react": "^18.0.31",
-    "@types/react-dom": "^18.0.11",
     "react-scripts": "5.0.1",
-    "typescript": "^5.0.4"
+    "typescript": "^4.9.5"
   }
 }
