--- a/blackjack/package.json
+++ b/blackjack/package.json
@@ -10,13 +10,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
-    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.10.0",
-    "react-toast": "^1.0.3",
     "react-toastify": "^9.1.2",
     "socket.io-client": "^4.6.1",
-    "styled-components": "^5.3.9",
-    "tippy.js": "^6.3.7"
+    "styled-components": "^5.3.9"
   },
   "scripts": {
     "start": "react-scripts start",
