--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch . --ext ts --exec ts-node src/server.ts"
+    "start": "nodemon --watch . --ext ts --exec ts-node src/server.ts",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --fix --ext .ts"
   },
   "author": "Anastasia Polivoda",
   "license": "ISC",
@@ -13,7 +15,16 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/uuid": "^9.0.1",
-    "typescript": "^5.0.4"
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import-newlines": "^1.3.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.7",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@types/socket.io": "^3.0.2",
