--- a/blackjack/package.json
+++ b/blackjack/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "fast-deep-equal": "^3.1.3",
     "handy-svg": "^1.0.8",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
-    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
