--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "nanoid": "^4.0.2",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1",
+    "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   }
 }
