--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "keywords": [],
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.194",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -27,11 +28,15 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/jest": "^29.5.1",
     "@types/socket.io": "^3.0.2",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1",
+    "socket.io-mock": "^1.3.2",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   }
