feat: add TopUpBalance tests

--- a/server/.github/workflows/main.yml
+++ b/server/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     pull_request:
         branches: ['main', 'develop']
 jobs:
-    unit tests:
+    unit_tests:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
