--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -3,7 +3,6 @@ name: Web CI
 on: push
 
 jobs:
-
   unit:
     runs-on: ubuntu-latest
     steps:
@@ -11,9 +10,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install dependencies
-      run: npm install
+      run: |
+        cd server && npm ci
 
     - name: Run Jest tests
-      run: npm test
+      run: |
+        cd server && npm test
       env:
         CI: false
