--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.14.194",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
