--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1",
     "socket.io-mock": "^1.3.2",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
