--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
   "keywords": [],
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
     "@types/lodash": "^4.14.194",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
@@ -25,22 +27,17 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-import-newlines": "^1.3.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
-    "prettier": "^2.8.7",
-    "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "@types/jest": "^29.5.1",
-    "@types/socket.io": "^3.0.2",
     "express": "^4.18.2",
-    "lodash": "^4.17.21",
+    "jest": "^29.5.0",
     "nanoid": "^4.0.2",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.7",
     "socket.io": "^4.6.1",
     "socket.io-mock": "^1.3.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
     "uuid": "^9.0.0"
   }
 }
