--- a/blackjack/package.json
+++ b/blackjack/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
+    "framer-motion": "^10.12.4",
     "handy-svg": "^1.0.8",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
